# c-rust-cpp

./: general-notes.txt
c/: c-notes.txt  notes.txt  temp-notes.txt
c/basics/: basics.c
c/playground/: playground.c
c/variables/: Makefile  variables  variables.c
cpp/: cpp-language-notes.txt  cpp-notes.txt  notes.txt
cpp/basics/: basics  basics.cpp
cpp/constants/: constants  constants-notes.txt  constants.cpp
cpp/dataTypes/: dataTypes-notes.txt
cpp/io/: io  io-notes.txt  io.cpp
cpp/variables/: variables-notes.txt  variables.cpp
rust/: rust-notes.txt
rust/challenges/grains_exercism/: Cargo.toml
rust/challenges/grains_exercism/src/: lib.rs  main.rs
rust/challenges/sublist/src/: lib.rs  main.rs
rust/enums/src/: main.rs
rust/generic_trait_lifetime/src/: lib.rs  main.rs
rust/module_system/src/: first_module.rs  main.rs  third_module.rs
rust/module_system/src/fourth_module/: inside_fourth_module.rs
rust/ownership/src/: main.rs
rust/playground/src/: main.rs
rust/projects/lox_rs/: Cargo.toml
rust/projects/lox_rs/src/: lib.rs  main.rs
rust/structs/src/: main.rs
rust/the_book/: temp-notes.txt
rust/the_book/asynchronous_programming/: Cargo.toml  notes.txt
rust/the_book/asynchronous_programming/src/: lib.rs  main.rs
rust/the_book/guessing_game/: notes.txt
rust/the_book/hello_world/: main
rust/the_book/iterators_and_closures/: notes.txt
rust/the_book/multithreaded_web_server/: Cargo.toml  about.html
rust/training_with_ai/session_one/: Cargo.toml
rust/writing_automated_tests/tests/: integ_test.rs  some_test.rs
(+43 files in other folders)
