[package]
name = "asynchronous_programming"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
scraper = "0.20"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
    "macros"
] }
tokio-stream = "0.1"
